canvas z-index fix

--- a/src/assets/sass/components/display.sass
+++ b/src/assets/sass/components/display.sass
@@ -6,13 +6,14 @@
     position: fixed
     top: 0
     left: calc(20vw - 30px)
+    // z-index: 1
 
 
 .canvas-placeholder 
     text-align: center
     padding-top: 30vh
     color: #888
-    z-index: 1
+    // z-index: 1
 
 
 .reset-btn 
