--- a/src/assets/sass/components/sidebar.sass
+++ b/src/assets/sass/components/sidebar.sass
@@ -97,7 +97,7 @@
 
 .help 
     position: fixed
-    z-index: 2
+    // z-index: 2
     width: calc(60vw - 60px)
     top: 20vh
     left: 20vw
