--- a/src/assets/sass/components/startpage.sass
+++ b/src/assets/sass/components/startpage.sass
@@ -22,7 +22,7 @@
     left: 0
 
 #intStartCanvas
-    z-index: 3
+    z-index: 2
 
 .quote
     position: absolute
@@ -49,7 +49,7 @@
     top: 70vh
     right: 20vw
     font-size: 25pt
-    z-index: 4
+    z-index: 3
     transition: 0.2s ease
     &:hover
         color: $secondary-color
